<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- Main Activity's strings -->
    <string name="app_name">MusicalStructure</string>
    <string name="btn_list_by_artist">Artist</string>
    <string name="btn_list_by_title">Title</string>
    <string name="btn_list_by_genre">Genre</string>
    <string name="text_author">Author Sample</string>
    <string name="text_title">Title of Track</string>
    <string name="text_genre">Genre</string>
    <string name="text_length">length</string>
    <string name="dialog_permission_request_title">Need permission for reading music files</string>
    <string name="dialog_permission_request_message">Application needs your permission for reading music files to continue</string>
    <string name="dialog_positive_button">Grant permission</string>
    <string name="dialog_negative_button">Exit</string>
    <string name="menu_title">Sort tracks by:</string>
    <string name="menu_length">Length</string>


    <!-- DummyMusicTrack's strings -->
    <string name="playing_dummy_music_track">Playing <xliff:g id="title">%s</xliff:g></string>
    <string name="playing_dummy_music_track_by_author">Playing <xliff:g id="author">%s</xliff:g>'s track</string>
    <string name="txt_dummy_list">Use Dummy Tracks</string>
    <string name="txt_mp3_tracks">Use Tracks From Storage</string>

    <!-- Error Activity strings -->
    <!-- Error Title, max 35 characters!! -->
    <string name="txt_error_title">Error Title example</string>
    <string name="txt_error_title_no_media">No media mounted</string>
    <string name="txt_error_title_no_permission_granted">Read storage permission denied</string>
    <string name="txt_error_title_no_files_found">No files found</string>
    <string name="txt_error_title_query_failed">Unexpected error</string>

    <!-- Error Description -->
    <string name="txt_error_description">Error text description</string>
    <string name="txt_error_description_no_media">Searching shared Music directory was unsuccessful.
        Check your system settings!</string>
    <string name="txt_error_description_no_permission_granted">In order to play music from files,
        the application needs your permission for reading access to your files</string>
    <string name="txt_error_description_no_files_found">Your Music folder is empty.
        Copy some mp3 files into it in order to play them!</string>
    <string name="txt_error_description_query_failed">Unexpected Mp3 parsing error occured, call the developer :(</string>

    <!-- Error Button -->
    <string name="btn_error_right">Got it</string>

    <string name="mp3_title_unknown">Unknown</string>
    <string name="menu_playlist">Playlist</string>

    <!-- Player Activity string resources -->
    <string name="txt_player_time">99:99</string>
    <string name="txt_player_title">Song Title Goes Here</string>

    <!-- Playlist Activity string resources -->
    <string name="playlist_toolbar_title"> </string>
    <string name="playlist_image_description">own work</string>
    <string name="label_activity_main">Tracklist Picker</string>
    <string name="label_playlist_activity">Track Selection</string>
    <string name="label_error_activity">Error</string>
    <string name="label_player_activity">Now Playing</string>

</resources>
